fix: add async file writing